[metadata]
name = oerpscenario
author = Camptocamp SA (Nicolas Bessi)
author-email = info@camptocamp.com
summary = DSL to manipulate/test/configure OpenERP/Odoo remotely
license = GPL3
description-file = README.rst
home-page = http://pypi.python.org/pypi/openerpscenario
requires-python = >=2.7
classifier =
Development Status :: 0.1
Environment :: Console
Intended Audience :: Developers
Operating System :: OS Independent
Programming Language :: Python
[files]
package=oerpscenario
data_files=
   features=features
[entry_points]
console_scripts =
    openerp_scenario = oerpscenario.openerp_scenario:main
